finishing project, some few tweaks left. I'll try to keep a eye tune in the future.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                    <div class="user-nav__user">
                        <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo">
                        <span class="user-nav__user-name">Jonas</span>
+                       ul.user-nav__
                    </div>                       
                 </nav>                
             </header>
@@ -175,12 +176,28 @@
                            <button class="btn-inline">Show all <span>&rarr;</span></button>
                         </div>
                         
+                    </div>
                         <div class="cta">
                             <h2 class="cta__book-now">Good news! We have 4 free rooms for your selected dates!</h2>
-                            <button class="btn">Only 4 rooms left</button>
+                            <button class="btn">
+                                <span class="btn__visible">Book now</span>
+                                <span class="btn__invisible">Only 3 rooms left</span>
+                            </button>
                         </div>
-                    </div>
+                    
                 </main>
+            </div>
+        </div>
+        <br>
+        <div class="body">
+            <div class="challenge">
+                <div class="header2">Header</div>
+                <div class="small-box-1">Small box 1</div>
+                <div class="small-box-2">Small box 2</div>
+                <div class="small-box-3">Small box 3</div>
+                <div class="sidebar2">Sidebar</div>
+                <div class="main2">Main content</div>
+                <div class="footer2">Footer</div>
             </div>
         </div>
     </body>
